--- a/index.html
+++ b/index.html
@@ -65,21 +65,21 @@
     <table border="2px">
         <tr>
             <td>Coding
-                *****</td>
-            <td>Traveling *****</td>
+                ⭐⭐⭐⭐⭐</td>
+            <td>Traveling ⭐⭐⭐⭐⭐</td>
         </tr>
         <tr>
             <td>Gaming
-                ****</td>
-            <td>Eating *****</td>
+                ⭐⭐⭐⭐</td>
+            <td>Eating ⭐⭐⭐⭐</td>
         </tr>
         <tr>
-            <td>Dancing ***</td>
-            <td>Cooking *****</td>
+            <td>Dancing ⭐⭐⭐</td>
+            <td>Cooking ⭐⭐⭐⭐</td>
         </tr>
         <tr>
-            <td>Parting *****</td>
-            <td>Learning *****</td>
+            <td>Parting ⭐⭐⭐⭐</td>
+            <td>Learning ⭐⭐⭐⭐⭐</td>
         </tr>
 
     </table>
