--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </ul>
     <a href="hobbies.html"> My Hobbies</a> <a href="contact.html">Contact Me </a>
     <hr size="3">
-    <table border="2px">
+    <table>
         <thead>
             <th>Serial Number</th>
             <th>Hobbies</th>
@@ -62,7 +62,7 @@
     </table>
     <hr>
     <h3>Skills</h3>
-    <table border="2px">
+    <table>
         <tr>
             <td>Coding
                 ⭐⭐⭐⭐⭐</td>
